--- a/app/views/classes/_classes_header.html.erb
+++ b/app/views/classes/_classes_header.html.erb
@@ -94,7 +94,7 @@
         </li><!--Ends dropdown menu-->
         <li class="dropdown" id="menu1"><!-- Starts the "Arts" dropdown menu-->
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            Arts and Music
+            Grades
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
