--- a/app/views/classes/show.html.erb
+++ b/app/views/classes/show.html.erb
@@ -31,7 +31,7 @@
     
     <ul class="nav nav-tabs" style="text-align:center;">
       <li class="active"><a href="#info" data-toggle="tab">Info</a></li>
-      <li class="disabled"><a href="#" data-toggle="tab">Pictures</a></li>
+      <li><a href="#photos" data-toggle="tab">Pictures</a></li>
      </ul>
     <div class="tab-content">
       <div class="tab-pane active limited-width" id="info">
