--- a/app/views/static_pages/college_acceptances.html.erb
+++ b/app/views/static_pages/college_acceptances.html.erb
@@ -1,5 +1,5 @@
 <div class="container" id="teampage">
-<h1 style="text-align: center;">College Acceptances</h1>
+<h1 style="text-align: center;">College Choices</h1>
 
 <table class="table" style="text-align: center;">
 <tr class="tableizer-firstrow"><th>Name</th><th>College</th><th>College Type</th><th>City</th><th>State</th><th>Country</th></tr>
