--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
 					<span id="footerTitle">Important Links</span>
 					<ul>
 						<a href="http://www.vqr.mx/DmkD"><li>Bus Map</li></a>
+						<a href="https://sites.google.com/site/harborfieldshs/"><li>Today's Announcements</li></a>
 						<!--<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>-->
 						<li><%= link_to "About Site", about_path %></li>
 					</ul>
