Updated college list

--- a/app/views/static_pages/college_acceptances.html.erb
+++ b/app/views/static_pages/college_acceptances.html.erb
@@ -2,6 +2,22 @@
 <h1 style="text-align: center;">College Choices</h1>
 
 <table class="table" style="text-align: center;">
+<style type="text/css">
+	table.tableizer-table {
+	border: 1px solid #CCC; font-family: Arial, Helvetica, sans-serif
+	font-size: 12px;
+} 
+.tableizer-table td {
+	padding: 4px;
+	margin: 3px;
+	border: 1px solid #ccc;
+}
+.tableizer-table th {
+	background-color: #104E8B; 
+	color: #FFF;
+	font-weight: bold;
+}
+</style>
 <tr class="tableizer-firstrow"><th>Name</th><th>College</th><th>College Type</th><th>City</th><th>State</th><th>Country</th></tr>
  <tr><td>Abbott, Miranda R</td><td>Wagner College</td><td>4 Yr Private NP</td><td>Staten Island</td><td>NY</td><td>United States</td></tr>
  <tr><td>Axelrod, Samuel</td><td>Syracuse University</td><td>4 Yr Private NP</td><td>Syracuse</td><td>NY</td><td>United States</td></tr>
@@ -10,15 +26,21 @@
  <tr><td>Benson, Michaelyn T</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Berkery, Elizabeth M</td><td>Johnson & Wales University (Providence)</td><td>4 Yr Private NP</td><td>Providence</td><td>RI</td><td>United States</td></tr>
  <tr><td>Bertossi, Benjamin R</td><td>Loyola University Maryland</td><td>4 Yr Private NP</td><td>Baltimore</td><td>MD</td><td>United States</td></tr>
+ <tr><td>Bocchicchio, Troy M</td><td>The University of Tampa</td><td>4 Yr Private NP</td><td>Tampa</td><td>FL</td><td>United States</td></tr>
  <tr><td>Bonavita, Stephanie M</td><td>Becker College</td><td>4 Yr Private NP</td><td>Worcester</td><td>MA</td><td>United States</td></tr>
  <tr><td>Boyland, Gillian B</td><td>University of Pittsburgh</td><td>4 Yr Public NP</td><td>Pittsburgh</td><td>PA</td><td>United States</td></tr>
+ <tr><td>Bracken, Jack H</td><td>State University of New York at New Paltz</td><td>4 Yr Public NP</td><td>New Paltz</td><td>NY</td><td>United States</td></tr>
  <tr><td>Brenner, Abby R</td><td>East Stroudsburg University of Pennsylvania</td><td>4 Yr Public NP</td><td>East Stroudsburg</td><td>PA</td><td>United States</td></tr>
+ <tr><td>Brent, Shannon L</td><td>University of Delaware</td><td>4 Yr Public NP</td><td>Newark</td><td>DE</td><td>United States</td></tr>
  <tr><td>Buchholtz, Renee' A</td><td>University of Florida</td><td>4 Yr Public NP</td><td>Gainesville</td><td>FL</td><td>United States</td></tr>
  <tr><td>Burns, Tucker P</td><td>United States Marine Corps</td><td>N/A</td><td>&nbsp;</td><td>&nbsp;</td><td>United States</td></tr>
  <tr><td>Cabot, Jacqueline G</td><td>Pratt Institute</td><td>4 Yr Private NP</td><td>Brooklyn</td><td>NY</td><td>United States</td></tr>
  <tr><td>Canino, Jacqueline M</td><td>St. John's University - Queens Campus</td><td>4 Yr Private NP</td><td>Queens</td><td>NY</td><td>United States</td></tr>
  <tr><td>Cannavale, Lisa</td><td>University at Buffalo The State University of New York</td><td>4 Yr Public NP</td><td>Buffalo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Carrero-Sagona, Ginamarie</td><td>LIU Post</td><td>4 Yr Private NP</td><td>Brookville</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Carroll, Kristen N</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Casey, Brendan J</td><td>United States Marine Corps</td><td>N/A</td><td>&nbsp;</td><td>&nbsp;</td><td>United States</td></tr>
+ <tr><td>Cates, Ryan F</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Cheng, Anna B</td><td>High Point University</td><td>4 Yr Private NP</td><td>High Point</td><td>NC</td><td>United States</td></tr>
  <tr><td>Colavito, Olivia B</td><td>American University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
  <tr><td>Conklin, Meghan C</td><td>Pennsylvania State University, University Park</td><td>4 Yr Public NP</td><td>University Park</td><td>PA</td><td>United States</td></tr>
@@ -26,6 +48,8 @@
  <tr><td>Constant, Evyania</td><td>Seton Hall University</td><td>4 Yr Private NP</td><td>South Orange</td><td>NJ</td><td>United States</td></tr>
  <tr><td>Cornell, Sean C</td><td>University of South Florida, St. Pete</td><td>4 Yr Public NP</td><td>St. Petersburg</td><td>FL</td><td>United States</td></tr>
  <tr><td>Corrado, Joseph L</td><td>Hofstra University</td><td>4 Yr Private NP</td><td>Hempstead</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Cox, Brian M</td><td>Iona College</td><td>4 Yr Private NP</td><td>New Rochelle</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Crespo, Cassandra A</td><td>Hofstra University</td><td>4 Yr Private NP</td><td>Hempstead</td><td>NY</td><td>United States</td></tr>
  <tr><td>Cunneen, Patrick M</td><td>James Madison University</td><td>4 Yr Public NP</td><td>Harrisonburg</td><td>VA</td><td>United States</td></tr>
  <tr><td>Damm, Nicole E</td><td>SUNY at Farmingdale</td><td>4 Yr Public NP</td><td>Farmingdale</td><td>NY</td><td>United States</td></tr>
  <tr><td>David, Nicholas A</td><td>Sacred Heart University</td><td>4 Yr Private NP</td><td>Fairfield</td><td>CT</td><td>United States</td></tr>
@@ -49,8 +73,10 @@
  <tr><td>Gaffney, Douglas N</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gallanty, Christopher J</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gallanty, Matthew T</td><td>Bentley University</td><td>4 Yr Private NP</td><td>Waltham</td><td>MA</td><td>United States</td></tr>
+ <tr><td>Gamble, Ryder S</td><td>SUNY Oswego</td><td>4 Yr Public NP</td><td>Oswego</td><td>NY</td><td>United States</td></tr>
  <tr><td>Garvey, Madeline A</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gary, Elizabeth G</td><td>College of Charleston</td><td>4 Yr Public NP</td><td>Charleston</td><td>SC</td><td>United States</td></tr>
+ <tr><td>Gavras, Victoria L</td><td>University of Connecticut</td><td>4 Yr Public NP</td><td>Storrs</td><td>CT</td><td>United States</td></tr>
  <tr><td>Geller, Jonathan B</td><td>Berklee College of Music</td><td>4 Yr Private NP</td><td>Boston</td><td>MA</td><td>United States</td></tr>
  <tr><td>Gerardi, William C</td><td>American University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
  <tr><td>Giacoma, Jordan M</td><td>The George Washington University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
@@ -60,6 +86,7 @@
  <tr><td>Gray, Melanie T</td><td>Binghamton University</td><td>4 Yr Public NP</td><td>Binghamton</td><td>NY</td><td>United States</td></tr>
  <tr><td>Griskie, Kaylee S</td><td>University of South Florida, Tampa</td><td>4 Yr Public NP</td><td>Tampa</td><td>FL</td><td>United States</td></tr>
  <tr><td>Guarino, Bridget A</td><td>Indiana University of Pennsylvania</td><td>4 Yr Public NP</td><td>Indiana</td><td>PA</td><td>United States</td></tr>
+ <tr><td>Guarino, Jessica M</td><td>Drexel University</td><td>4 Yr Private NP</td><td>Philadelphia</td><td>PA</td><td>United States</td></tr>
  <tr><td>Hagerman, Blake T</td><td>Manhattanville College</td><td>4 Yr Private NP</td><td>Purchase</td><td>NY</td><td>United States</td></tr>
  <tr><td>Haggard, RaeAnne N</td><td>The George Washington University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
  <tr><td>Hahm, Emily C</td><td>University of Miami</td><td>4 Yr Private NP</td><td>Coral Gables</td><td>FL</td><td>United States</td></tr>
@@ -70,6 +97,7 @@
  <tr><td>Irenze, Anthony A</td><td>United States Marine Corps</td><td>N/A</td><td>&nbsp;</td><td>&nbsp;</td><td>United States</td></tr>
  <tr><td>Jensen, Mackinley R</td><td>Pennsylvania State University, University Park</td><td>4 Yr Public NP</td><td>University Park</td><td>PA</td><td>United States</td></tr>
  <tr><td>Johnson, Kristen A</td><td>Boston College</td><td>4 Yr Private NP</td><td>Chestnut Hill</td><td>MA</td><td>United States</td></tr>
+ <tr><td>Johnson, Timothy L</td><td>Sacred Heart University</td><td>4 Yr Private NP</td><td>Fairfield</td><td>CT</td><td>United States</td></tr>
  <tr><td>Kaminsky, Emily R</td><td>Gettysburg College</td><td>4 Yr Private NP</td><td>Gettysburg</td><td>PA</td><td>United States</td></tr>
  <tr><td>Kantor, Alexandra M</td><td>Florida Gulf Coast University</td><td>4 Yr Public NP</td><td>Fort Myers</td><td>FL</td><td>United States</td></tr>
  <tr><td>Kaufman, Jacqueline N</td><td>Binghamton University</td><td>4 Yr Public NP</td><td>Binghamton</td><td>NY</td><td>United States</td></tr>
@@ -79,17 +107,23 @@
  <tr><td>Kohl, Ryan T</td><td>Virginia Polytechnic Institute and State University</td><td>4 Yr Public NP</td><td>Blacksburg</td><td>VA</td><td>United States</td></tr>
  <tr><td>Kratochvil, Natalie M</td><td>Siena College</td><td>4 Yr Private NP</td><td>Loudonville</td><td>NY</td><td>United States</td></tr>
  <tr><td>Krause, Rachel S</td><td>Maine College of Art</td><td>4 Yr Private NP</td><td>Portland</td><td>ME</td><td>United States</td></tr>
+ <tr><td>Kudler, Ashley R</td><td>University of Delaware</td><td>4 Yr Public NP</td><td>Newark</td><td>DE</td><td>United States</td></tr>
+ <tr><td>Lacey, Travis J</td><td>Suffolk County Community College, Western Campus</td><td>2 Yr Public NP</td><td>Brentwood</td><td>NY</td><td>United States</td></tr>
  <tr><td>Lankeaux, Derek J</td><td>Pennsylvania State University, University Park</td><td>4 Yr Public NP</td><td>University Park</td><td>PA</td><td>United States</td></tr>
  <tr><td>Larkin, Stephanie P</td><td>Bucknell University</td><td>4 Yr Private NP</td><td>Lewisburg</td><td>PA</td><td>United States</td></tr>
  <tr><td>Lauber, Madison S</td><td>Bard College</td><td>4 Yr Private NP</td><td>Annandale-on-Hudson</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Lauda, Hailey S</td><td>Stony Brook University</td><td>4 Yr Public NP</td><td>Stony Brook</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Lee, Iman</td><td>The George Washington University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
  <tr><td>Leparik, Francesca H</td><td>SUNY Oswego</td><td>4 Yr Public NP</td><td>Oswego</td><td>NY</td><td>United States</td></tr>
  <tr><td>Lepera, Alyssa R</td><td>University of Delaware</td><td>4 Yr Public NP</td><td>Newark</td><td>DE</td><td>United States</td></tr>
  <tr><td>Lindsey, Morgan R</td><td>Boston University</td><td>4 Yr Private NP</td><td>Boston</td><td>MA</td><td>United States</td></tr>
  <tr><td>Lombardo, Jennifer</td><td>La Salle University</td><td>4 Yr Private NP</td><td>Philadelphia</td><td>PA</td><td>United States</td></tr>
+ <tr><td>Long, Dillon C</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
  <tr><td>Luethi, Marissa R</td><td>Northeastern University</td><td>4 Yr Private NP</td><td>Boston</td><td>MA</td><td>United States</td></tr>
  <tr><td>Maher, Collin A</td><td>High Point University</td><td>4 Yr Private NP</td><td>High Point</td><td>NC</td><td>United States</td></tr>
  <tr><td>Maldon, Tasia W</td><td>Dowling College</td><td>4 Yr Private NP</td><td>Oakdale</td><td>NY</td><td>United States</td></tr>
  <tr><td>Malik, Zain J</td><td>Roger Williams University</td><td>4 Yr Private NP</td><td>Bristol</td><td>RI</td><td>United States</td></tr>
+ <tr><td>Martin, Steven</td><td>SUNY Oswego</td><td>4 Yr Public NP</td><td>Oswego</td><td>NY</td><td>United States</td></tr>
  <tr><td>McCullough, Christopher B</td><td>The University of Scranton</td><td>4 Yr Private NP</td><td>Scranton</td><td>PA</td><td>United States</td></tr>
  <tr><td>McDonagh, Michael T</td><td>College of William and Mary</td><td>4 Yr Public NP</td><td>Williamsburg</td><td>VA</td><td>United States</td></tr>
  <tr><td>McHale, Aidan P</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
@@ -106,15 +140,18 @@
  <tr><td>Pitt, Rainell M</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
  <tr><td>Prentiss, Caroline J</td><td>Fashion Institute of Technology</td><td>4 Yr Public NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
  <tr><td>Pulvidente, Connor A</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Quinn, Liam G</td><td>SUNY College at Oneonta</td><td>4 Yr Public NP</td><td>Oneonta</td><td>NY</td><td>United States</td></tr>
  <tr><td>Ramcharitar, Ethan N</td><td>Hunter College of the CUNY</td><td>4 Yr Public NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
  <tr><td>Rappa, Alec G</td><td>Pace University, New York City</td><td>4 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
  <tr><td>Rappa, Frank J</td><td>St. John's University - Queens Campus</td><td>4 Yr Private NP</td><td>Queens</td><td>NY</td><td>United States</td></tr>
  <tr><td>Rappa, Kieran A</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Ratti, Sean C</td><td>The University of Tampa</td><td>4 Yr Private NP</td><td>Tampa</td><td>FL</td><td>United States</td></tr>
  <tr><td>Ricca, Angelina T</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
  <tr><td>Robinson, John S</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Rodriguez, Paulina I</td><td>SUNY at Farmingdale</td><td>4 Yr Public NP</td><td>Farmingdale</td><td>NY</td><td>United States</td></tr>
  <tr><td>Rosen, Benjamin E</td><td>Purdue University</td><td>4 Yr Public NP</td><td>West Lafayette</td><td>IN</td><td>United States</td></tr>
  <tr><td>Ruijgh, Tjebbe</td><td>Boston University</td><td>4 Yr Private NP</td><td>Boston</td><td>MA</td><td>United States</td></tr>
+ <tr><td>Saddiq, Samira</td><td>Suffolk County Community College, Western Campus</td><td>2 Yr Public NP</td><td>Brentwood</td><td>NY</td><td>United States</td></tr>
  <tr><td>Saros, Caroline A</td><td>Skidmore College</td><td>4 Yr Private NP</td><td>Saratoga Springs</td><td>NY</td><td>United States</td></tr>
  <tr><td>Saulle, Daniel J</td><td>New York University</td><td>4 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
  <tr><td>Scally, Thomas C</td><td>Hofstra University</td><td>4 Yr Private NP</td><td>Hempstead</td><td>NY</td><td>United States</td></tr>
@@ -131,6 +168,8 @@
  <tr><td>Trust, Samantha E</td><td>Texas A&M University</td><td>4 Yr Public NP</td><td>College Station</td><td>TX</td><td>United States</td></tr>
  <tr><td>Umbach, Brian J</td><td>Pennsylvania State University, University Park</td><td>4 Yr Public NP</td><td>University Park</td><td>PA</td><td>United States</td></tr>
  <tr><td>Vassar, Shane A</td><td>Siena College</td><td>4 Yr Private NP</td><td>Loudonville</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Velasco, Jorge F</td><td>Stony Brook University</td><td>4 Yr Public NP</td><td>Stony Brook</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Viteritti, Luigi</td><td>Quinnipiac University</td><td>4 Yr Private NP</td><td>Hamden</td><td>CT</td><td>United States</td></tr>
  <tr><td>Viverito, Jesse T</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
  <tr><td>Wagner, Connor A</td><td>West Chester University of Pennsylvania</td><td>4 Yr Public NP</td><td>West Chester</td><td>PA</td><td>United States</td></tr>
  <tr><td>Walerstein, Isaac L</td><td>Rochester Institute of Technology</td><td>4 Yr Private NP</td><td>Rochester</td><td>NY</td><td>United States</td></tr>
@@ -147,4 +186,5 @@
  <tr><td>Wong, Alexander G</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
  <tr><td>Young, James E</td><td>Purchase College State University of New York</td><td>4 Yr Public NP</td><td>Purchase</td><td>NY</td><td>United States</td></tr>
 </table>
+
 </div>
