--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
   <div id="footer">
 		<div class="container" id="footer_holder">
 			<div class="row">
-				<div class="important_links span4 offset2">
+				<div class="important_links span3 offset1">
 					<span id="footerTitle">Important Links</span>
 					<ul>
 						<a href="http://www.vqr.mx/DmkD"><li>Bus Map</li></a>
@@ -10,8 +10,8 @@
 						<li><%= link_to "About Site", about_path %></li>
 					</ul>
 				</div> <!-- end "important" -->
-				<div class="contact span4">
-					<!-- Start of Youtube Subscription Box Embed Code --><iframe frameborder="0" id="fr" scrolling="no" src="http://www.youtube.com/subscribe_widget?p=HFTornadoNews" style="border: 0px; height: 104px; background:#FFF; overflow-x: hidden; overflow-y: hidden; width: 400px;"></iframe> <!-- End of Youtube Subscription Box Embed Code -->
+				<div class="span5" style="padding-top: 20px;">
+					<iframe src="http://www.highschoolcube.com/viewerguide/2130961" width="728" height="90" frameborder="0" scrolling="no" allowtransparency="true" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe><div> </div>
 					
 				</div><!-- end "contact" -->
 			</div>
