Harbinger Team page and Updates to College Choices

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,8 +6,8 @@
 					<ul>
 						<a href="http://www.vqr.mx/DmkD"><li>Bus Map</li></a>
 						<a href="https://sites.google.com/site/harborfieldshs/"><li>Today's Announcements</li></a>
-						<!--<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>-->
-						<li><%= link_to "About Site", about_path %></li>
+						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
+						<!--<li><%= link_to "About Site", about_path %></li>-->
 					</ul>
 				</div> <!-- end "important" -->
 				<div class="span5" style="padding-top: 20px;">
