--- a/app/views/static_pages/college_acceptances.html.erb
+++ b/app/views/static_pages/college_acceptances.html.erb
@@ -18,6 +18,22 @@
 	font-weight: bold;
 }
 </style>
+<style type="text/css">
+	table.tableizer-table {
+	border: 1px solid #CCC; font-family: Arial, Helvetica, sans-serif
+	font-size: 12px;
+} 
+.tableizer-table td {
+	padding: 4px;
+	margin: 3px;
+	border: 1px solid #ccc;
+}
+.tableizer-table th {
+	background-color: #104E8B; 
+	color: #FFF;
+	font-weight: bold;
+}
+</style><table class="table">
 <tr class="tableizer-firstrow"><th>Name</th><th>College</th><th>College Type</th><th>City</th><th>State</th><th>Country</th></tr>
  <tr><td>Abbott, Miranda R</td><td>Wagner College</td><td>4 Yr Private NP</td><td>Staten Island</td><td>NY</td><td>United States</td></tr>
  <tr><td>Axelrod, Samuel</td><td>Syracuse University</td><td>4 Yr Private NP</td><td>Syracuse</td><td>NY</td><td>United States</td></tr>
@@ -128,6 +144,7 @@
  <tr><td>McDonagh, Michael T</td><td>College of William and Mary</td><td>4 Yr Public NP</td><td>Williamsburg</td><td>VA</td><td>United States</td></tr>
  <tr><td>McHale, Aidan P</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
  <tr><td>McLaughlin, John K</td><td>Georgetown University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
+ <tr><td>McQuade, Meghan J</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
  <tr><td>Mejia, Ana Carolina</td><td>Stony Brook University</td><td>4 Yr Public NP</td><td>Stony Brook</td><td>NY</td><td>United States</td></tr>
  <tr><td>Melgar, Valerie M</td><td>Dominican College of Blauvelt</td><td>4 Yr Private NP</td><td>Orangeburg</td><td>NY</td><td>United States</td></tr>
  <tr><td>Mills, Keith A</td><td>Brown University</td><td>4 Yr Private NP</td><td>Providence</td><td>RI</td><td>United States</td></tr>
@@ -156,6 +173,7 @@
  <tr><td>Saulle, Daniel J</td><td>New York University</td><td>4 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
  <tr><td>Scally, Thomas C</td><td>Hofstra University</td><td>4 Yr Private NP</td><td>Hempstead</td><td>NY</td><td>United States</td></tr>
  <tr><td>Schaefer, Allison M</td><td>SUNY College at Oneonta</td><td>4 Yr Public NP</td><td>Oneonta</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Schilling, Jessica E</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
  <tr><td>Semmelmeier, Caroline S</td><td>College of William and Mary</td><td>4 Yr Public NP</td><td>Williamsburg</td><td>VA</td><td>United States</td></tr>
  <tr><td>Shang, Fei</td><td>Binghamton University</td><td>4 Yr Public NP</td><td>Binghamton</td><td>NY</td><td>United States</td></tr>
  <tr><td>Shields, Caroline L</td><td>Johnson & Wales University (Providence)</td><td>4 Yr Private NP</td><td>Providence</td><td>RI</td><td>United States</td></tr>
@@ -171,6 +189,7 @@
  <tr><td>Velasco, Jorge F</td><td>Stony Brook University</td><td>4 Yr Public NP</td><td>Stony Brook</td><td>NY</td><td>United States</td></tr>
  <tr><td>Viteritti, Luigi</td><td>Quinnipiac University</td><td>4 Yr Private NP</td><td>Hamden</td><td>CT</td><td>United States</td></tr>
  <tr><td>Viverito, Jesse T</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Wadler, Dylan G</td><td>University of Rochester</td><td>4 Yr Private NP</td><td>Rochester</td><td>NY</td><td>United States</td></tr>
  <tr><td>Wagner, Connor A</td><td>West Chester University of Pennsylvania</td><td>4 Yr Public NP</td><td>West Chester</td><td>PA</td><td>United States</td></tr>
  <tr><td>Walerstein, Isaac L</td><td>Rochester Institute of Technology</td><td>4 Yr Private NP</td><td>Rochester</td><td>NY</td><td>United States</td></tr>
  <tr><td>Ward, William D</td><td>University of Pittsburgh</td><td>4 Yr Public NP</td><td>Pittsburgh</td><td>PA</td><td>United States</td></tr>
@@ -186,5 +205,7 @@
  <tr><td>Wong, Alexander G</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
  <tr><td>Young, James E</td><td>Purchase College State University of New York</td><td>4 Yr Public NP</td><td>Purchase</td><td>NY</td><td>United States</td></tr>
 </table>
+
+
 
 </div>
