--- a/app/views/static_pages/harbingerteam.erb
+++ b/app/views/static_pages/harbingerteam.erb
@@ -1,13 +1,136 @@
-<div class="span6 offset3" id="teampage">
-	<h1>About the Harbinger Team </h1>
-	<h3>Advisor:</h3>
-	<p>Mr. Ambrosio</p>
+<div class="span10" id="teampage">
+	<h1>The Harbinger Team </h1>
+	
+	<p><b>Advisor:</b> Mr. Ambrosio</p>
 	<h3>Members:</h3>
 
-	<h5>News Team</h5>
-	<p>This is empty....<em>For now</em>...</p>
-	
-		<!-- insert News Team members here inside of <p> tags-->
+	<div class="span3">
+
+		<h4>The Harbinger Online</h4>
+		<b>Website Creators:</b>
+
+		<p>Alex Lafrosia and Brian Kelly</p>
+
+		<b>Web Master:</b> 
+		<p>Jake Dombrower</p>
+
+		<b>Assistant Web Master:</b>
+
+		<p>Connor Stewart</p>
+
+		<b>Content Editors:</b>
+
+		<p>Dylan Bass</p>
+
+		<p>Jake Dombrower</p>
+
+		<p>Christopher Peters</p>
+
+		<p>Eric Peters</p>
+
+		<p>Alexa Prodromakis</p>
+
+		<p>Mia Rodriguez</p>
+
+		<p>Steven Schmidt</p>
+
+		<p>Victoria Walsh</p>
+	</div>
+	<div class="span3">
+		<h4>The Harbinger Newspaper</h4>
+		<b>Print Editor:</b>
+
+		<p>Eric Peters</p>
+
+		<b>Reporters:</b>
+
+		<p>Brianna Ackerman</p>
+
+		<p>Dylan Bass</p>
+
+		<p>Anna Cheng</p>
+
+		<p>Melissa Cooper</p>
+
+		<p>Alex Coventry</p>
+
+		<p>Jake Dombrower</p>
+
+		<p>Dylan Kaufman</p>
+
+		<p>Lacey Kozlowski-Coward</p>
+
+		<p>Max McGill</p>
+
+		<p>Christopher Peters</p>
+
+		<p>Eric Peters</p>
+
+		<p>Alexa Prodromakis</p>
+
+		<p>Mia Rodriguez</p>
+
+		<p>Steven Schmidt</p>
+
+		<p>Alec Walker</p>
+
+		<p>Victoria Walsh</p>
+	</div>
+	<div class="span3">
+		<h4>The Harbinger Video Team</h4>
+
+		<b>Live Stream Producer:</b>
+
+		<p> Alex Coventry</p>
+
+		<b>Live Production Team:</b>
+
+		<p>Doug Terc </p>
+
+		<p>Emanuel Bebari</p>
+
+		<p>Jason Clampitt</p>
+
+		<p>Bobby Williamson</p>
+
+		<p>Sydnie Wittenberg</p>
+
+		<p>Rachel Antonison</p>
+
+		<p>Maxwell Land-Messer Manzi</p>
+
+		<b>News Video Producer: </b>
+
+		<p>Max McGill</p>
+
+		<b>Videographers:</b>
+
+		<p>Dylan Bass</p>
+
+		<p>Anna Cheng</p>
+
+		<p>Alex Coventry</p>
+
+		<p>Jake Dombrower</p>
+
+		<p>Dylan Kaufman</p>
+
+		<p>Lacey Kozlowski-Coward</p>
+
+		<p>Max McGill</p>
+
+		<p>Christopher Peters</p>
+
+		<p>Eric Peters</p>
+
+		<p>Alexa Prodromakis</p>
+
+		<p>Mia Rodriguez</p>
+
+		<p>Steven Schmidt</p>
+		
+	</div>
+
 		
 
 
