College List update

--- a/app/views/static_pages/college_acceptances.html.erb
+++ b/app/views/static_pages/college_acceptances.html.erb
@@ -33,9 +33,25 @@
 	color: #FFF;
 	font-weight: bold;
 }
+</style><style type="text/css">
+	table.tableizer-table {
+	border: 1px solid #CCC; font-family: Arial, Helvetica, sans-serif
+	font-size: 12px;
+} 
+.tableizer-table td {
+	padding: 4px;
+	margin: 3px;
+	border: 1px solid #ccc;
+}
+.tableizer-table th {
+	background-color: #104E8B; 
+	color: #FFF;
+	font-weight: bold;
+}
 </style><table class="table">
 <tr class="tableizer-firstrow"><th>Name</th><th>College</th><th>College Type</th><th>City</th><th>State</th><th>Country</th></tr>
  <tr><td>Abbott, Miranda R</td><td>Wagner College</td><td>4 Yr Private NP</td><td>Staten Island</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Abrams, Phoebe R</td><td>Johnson & Wales University (Providence)</td><td>4 Yr Private NP</td><td>Providence</td><td>RI</td><td>United States</td></tr>
  <tr><td>Axelrod, Samuel</td><td>Syracuse University</td><td>4 Yr Private NP</td><td>Syracuse</td><td>NY</td><td>United States</td></tr>
  <tr><td>Bank, Tyler A</td><td>University of Massachusetts, Amherst</td><td>4 Yr Public NP</td><td>Amherst</td><td>MA</td><td>United States</td></tr>
  <tr><td>Banks, Chandler A</td><td>Columbia University</td><td>4 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
@@ -49,6 +65,7 @@
  <tr><td>Brenner, Abby R</td><td>East Stroudsburg University of Pennsylvania</td><td>4 Yr Public NP</td><td>East Stroudsburg</td><td>PA</td><td>United States</td></tr>
  <tr><td>Brent, Shannon L</td><td>University of Delaware</td><td>4 Yr Public NP</td><td>Newark</td><td>DE</td><td>United States</td></tr>
  <tr><td>Buchholtz, Renee' A</td><td>University of Florida</td><td>4 Yr Public NP</td><td>Gainesville</td><td>FL</td><td>United States</td></tr>
+ <tr><td>Burke, Connor P</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
  <tr><td>Burns, Tucker P</td><td>United States Marine Corps</td><td>N/A</td><td>&nbsp;</td><td>&nbsp;</td><td>United States</td></tr>
  <tr><td>Cabot, Jacqueline G</td><td>Pratt Institute</td><td>4 Yr Private NP</td><td>Brooklyn</td><td>NY</td><td>United States</td></tr>
  <tr><td>Canino, Jacqueline M</td><td>St. John's University - Queens Campus</td><td>4 Yr Private NP</td><td>Queens</td><td>NY</td><td>United States</td></tr>
@@ -58,19 +75,20 @@
  <tr><td>Casey, Brendan J</td><td>United States Marine Corps</td><td>N/A</td><td>&nbsp;</td><td>&nbsp;</td><td>United States</td></tr>
  <tr><td>Cates, Ryan F</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Cheng, Anna B</td><td>High Point University</td><td>4 Yr Private NP</td><td>High Point</td><td>NC</td><td>United States</td></tr>
- <tr><td>Colavito, Olivia B</td><td>American University</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
- <tr><td>Conklin, Meghan C</td><td>Pennsylvania State University, University Park</td><td>4 Yr Public NP</td><td>University Park</td><td>PA</td><td>United States</td></tr>
- <tr><td>Consorte, Renee M</td><td>State University of New York at New Paltz</td><td>4 Yr Public NP</td><td>New Paltz</td><td>NY</td><td>United States</td></tr>
- <tr><td>Constant, Evyania</td><td>Seton Hall University</td><td>4 Yr Private NP</td><td>South Orange</td><td>NJ</td><td>United States</td></tr>
- <tr><td>Cornell, Sean C</td><td>University of South Florida, St. Pete</td><td>4 Yr Public NP</td><td>St. Petersburg</td><td>FL</td><td>United States</td></tr>
- <tr><td>Corrado, Joseph L</td><td>Hofstra University</td><td>4 Yr Private NP</td><td>Hempstead</td><td>NY</td><td>United States</td></tr>
- <tr><td>Cox, Brian M</td><td>Iona College</td><td>4 Yr Private NP</td><td>New Rochelle</td><td>NY</td><td>United States</td></tr>
- <tr><td>Crespo, Cassandra A</td><td>Hofstra University</td><td>4 Yr Private NP</td><td>Hempstead</td><td>NY</td><td>United States</td></tr>
- <tr><td>Cunneen, Patrick M</td><td>James Madison University</td><td>4 Yr Public NP</td><td>Harrisonburg</td><td>VA</td><td>United States</td></tr>
- <tr><td>Damm, Nicole E</td><td>SUNY at Farmingdale</td><td>4 Yr Public NP</td><td>Farmingdale</td><td>NY</td><td>United States</td></tr>
- <tr><td>David, Nicholas A</td><td>Sacred Heart University</td><td>4 Yr Private NP</td><td>Fairfield</td><td>CT</td><td>United States</td></tr>
- <tr><td>Davis, Melissa L</td><td>Buffalo State College of SUNY</td><td>4 Yr Public NP</td><td>Buffalo</td><td>NY</td><td>United States</td></tr>
- <tr><td>Dekie, Christen A</td><td>New York University</td><td>4 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Clermont, Christine A</td><td>University at Buffalo The State University of New York</td><td>4 Yr Public NP</td><td>Buffalo</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Name</td><td>College</td><td>College Type</td><td>City</td><td>DC</td><td>United States</td></tr>
+ <tr><td>Abbott, Miranda R</td><td>Wagner College</td><td>5 Yr Private NP</td><td>Staten Island</td><td>PA</td><td>United States</td></tr>
+ <tr><td>Abrams, Phoebe R</td><td>Johnson & Wales University (Providence)</td><td>5 Yr Private NP</td><td>Providence</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Axelrod, Samuel</td><td>Syracuse University</td><td>5 Yr Private NP</td><td>Syracuse</td><td>NJ</td><td>United States</td></tr>
+ <tr><td>Bank, Tyler A</td><td>University of Massachusetts, Amherst</td><td>5 Yr Public NP</td><td>Amherst</td><td>FL</td><td>United States</td></tr>
+ <tr><td>Banks, Chandler A</td><td>Columbia University</td><td>5 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Benson, Michaelyn T</td><td>SUNY College at Geneseo</td><td>5 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Berkery, Elizabeth M</td><td>Johnson & Wales University (Providence)</td><td>5 Yr Private NP</td><td>Providence</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Bertossi, Benjamin R</td><td>Loyola University Maryland</td><td>5 Yr Private NP</td><td>Baltimore</td><td>VA</td><td>United States</td></tr>
+ <tr><td>Bocchicchio, Troy M</td><td>The University of Tampa</td><td>5 Yr Private NP</td><td>Tampa</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Bonavita, Stephanie M</td><td>Becker College</td><td>5 Yr Private NP</td><td>Worcester</td><td>CT</td><td>United States</td></tr>
+ <tr><td>Boyland, Gillian B</td><td>University of Pittsburgh</td><td>5 Yr Public NP</td><td>Pittsburgh</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Bracken, Jack H</td><td>State University of New York at New Paltz</td><td>5 Yr Public NP</td><td>New Paltz</td><td>NY</td><td>United States</td></tr>
  <tr><td>Derasmo, Matthew R</td><td>The Catholic University of America</td><td>4 Yr Private NP</td><td>Washington</td><td>DC</td><td>United States</td></tr>
  <tr><td>Deren, Toni L</td><td>Post University</td><td>4 Yr Private NP</td><td>Waterbury</td><td>CT</td><td>United States</td></tr>
  <tr><td>DiFazio, Lauren E</td><td>Vassar College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
@@ -89,6 +107,7 @@
  <tr><td>Gaffney, Douglas N</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gallanty, Christopher J</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gallanty, Matthew T</td><td>Bentley University</td><td>4 Yr Private NP</td><td>Waltham</td><td>MA</td><td>United States</td></tr>
+ <tr><td>Gallegos, Miguel</td><td>SUNY College at Old Westbury</td><td>4 Yr Public NP</td><td>Old Westbury</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gamble, Ryder S</td><td>SUNY Oswego</td><td>4 Yr Public NP</td><td>Oswego</td><td>NY</td><td>United States</td></tr>
  <tr><td>Garvey, Madeline A</td><td>SUNY College at Geneseo</td><td>4 Yr Public NP</td><td>Geneseo</td><td>NY</td><td>United States</td></tr>
  <tr><td>Gary, Elizabeth G</td><td>College of Charleston</td><td>4 Yr Public NP</td><td>Charleston</td><td>SC</td><td>United States</td></tr>
@@ -113,12 +132,14 @@
  <tr><td>Irenze, Anthony A</td><td>United States Marine Corps</td><td>N/A</td><td>&nbsp;</td><td>&nbsp;</td><td>United States</td></tr>
  <tr><td>Jensen, Mackinley R</td><td>Pennsylvania State University, University Park</td><td>4 Yr Public NP</td><td>University Park</td><td>PA</td><td>United States</td></tr>
  <tr><td>Johnson, Kristen A</td><td>Boston College</td><td>4 Yr Private NP</td><td>Chestnut Hill</td><td>MA</td><td>United States</td></tr>
+ <tr><td>Johnson, Lauren N</td><td>Shenandoah University</td><td>4 Yr Private NP</td><td>Winchester</td><td>VA</td><td>United States</td></tr>
  <tr><td>Johnson, Timothy L</td><td>Sacred Heart University</td><td>4 Yr Private NP</td><td>Fairfield</td><td>CT</td><td>United States</td></tr>
  <tr><td>Kaminsky, Emily R</td><td>Gettysburg College</td><td>4 Yr Private NP</td><td>Gettysburg</td><td>PA</td><td>United States</td></tr>
  <tr><td>Kantor, Alexandra M</td><td>Florida Gulf Coast University</td><td>4 Yr Public NP</td><td>Fort Myers</td><td>FL</td><td>United States</td></tr>
  <tr><td>Kaufman, Jacqueline N</td><td>Binghamton University</td><td>4 Yr Public NP</td><td>Binghamton</td><td>NY</td><td>United States</td></tr>
  <tr><td>Kazerouni, Sara M</td><td>Elmira College</td><td>4 Yr Private NP</td><td>Elmira</td><td>NY</td><td>United States</td></tr>
  <tr><td>Kelly, Kristen M</td><td>New York Institute of Technology - Old Westbury</td><td>4 Yr Private NP</td><td>Old Westbury</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Kennedy, Colleen B</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
  <tr><td>Khajooei-Kermani, Kian T</td><td>New York University</td><td>4 Yr Private NP</td><td>New York</td><td>NY</td><td>United States</td></tr>
  <tr><td>Kohl, Ryan T</td><td>Virginia Polytechnic Institute and State University</td><td>4 Yr Public NP</td><td>Blacksburg</td><td>VA</td><td>United States</td></tr>
  <tr><td>Kratochvil, Natalie M</td><td>Siena College</td><td>4 Yr Private NP</td><td>Loudonville</td><td>NY</td><td>United States</td></tr>
@@ -150,6 +171,7 @@
  <tr><td>Mills, Keith A</td><td>Brown University</td><td>4 Yr Private NP</td><td>Providence</td><td>RI</td><td>United States</td></tr>
  <tr><td>Moller, William T</td><td>State University of New York - Plattsburgh</td><td>4 Yr Public NP</td><td>Plattsburgh</td><td>NY</td><td>United States</td></tr>
  <tr><td>Morency, Emily K</td><td>Marist College</td><td>4 Yr Private NP</td><td>Poughkeepsie</td><td>NY</td><td>United States</td></tr>
+ <tr><td>Morrow, Tanner J</td><td>Fordham University</td><td>4 Yr Private NP</td><td>Bronx</td><td>NY</td><td>United States</td></tr>
  <tr><td>Noden, Anna Louise</td><td>Clark University</td><td>4 Yr Private NP</td><td>Worcester</td><td>MA</td><td>United States</td></tr>
  <tr><td>Palmer, Alliah D</td><td>Nassau Community College</td><td>2 Yr Public NP</td><td>Garden City</td><td>NY</td><td>United States</td></tr>
  <tr><td>Perfall, Dustin P</td><td>State University of New York at Albany</td><td>4 Yr Public NP</td><td>Albany</td><td>NY</td><td>United States</td></tr>
@@ -205,6 +227,7 @@
  <tr><td>Wong, Alexander G</td><td>SUNY College at Cortland</td><td>4 Yr Public NP</td><td>Cortland</td><td>NY</td><td>United States</td></tr>
  <tr><td>Young, James E</td><td>Purchase College State University of New York</td><td>4 Yr Public NP</td><td>Purchase</td><td>NY</td><td>United States</td></tr>
 </table>
+
 
 
 
