--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,7 @@
 						<a href="http://www.vqr.mx/DmkD"><li>Bus Map</li></a>
 						<a href="https://sites.google.com/site/harborfieldshs/"><li>Today's Announcements</li></a>
 						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
+						<a href="http://harborfieldscsd.net/hhslibrary/LMC%20Webpage/index.htm"><li>HHS Library</li></a>
 						<!--<li><%= link_to "About Site", about_path %></li>-->
 					</ul>
 				</div> <!-- end "important" -->
