Link to print issues

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,6 +9,7 @@
 						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
 						<a href="http://harborfieldscsd.net/hhslibrary/LMC%20Webpage/index.htm"><li>HHS Library</li></a>
 						<!--<li><%= link_to "About Site", about_path %></li>-->
+						<a href="/articles#print"><li>Print Issues</li></a>
 					</ul>
 				</div> <!-- end "important" -->
 				<div class="span5" style="padding-top: 20px;">
