--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,11 @@ $(function() {
 
 });
 
+
+
 </script>
+
+
 
 <div class="container" id="articleview">
 	
@@ -143,3 +147,17 @@ $(function() {
 		</div>
   	</div>
 </div>
+
+<script type="text/javascript">
+$(function(){
+  var hash = window.location.hash;
+  hash && $('ul.nav a[href="' + hash + '"]').tab('show');
+
+  $('.nav-tabs a').click(function (e) {
+    $(this).tab('show');
+    var scrollmem = $('body').scrollTop();
+    window.location.hash = this.hash;
+    $('html,body').scrollTop(scrollmem);
+  });
+});
+</script>
